<resources>
    <string name="app_name">Project I</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="google_signup">Google+</string>
    <string name="facebook_signup">Facebook</string>
</resources>
