<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="48sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginTop="48dp"
        android:hint="@string/username_or_email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorPrimary"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="12dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="12dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/forgot_password"/>




</RelativeLayout>