<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="48sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_text"
        android:layout_marginTop="48dp"
        android:hint="@string/e_mail"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorPrimary"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="You can also sign up with:"/>

    <Button
        android:id="@+id/google"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/or"
        android:layout_marginTop="12dp"
        android:layout_marginRight="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:background="@color/googlePlusRed"
        android:textColor="@color/textColorPrimary"
        android:text="@string/google_signup"/>

    <Button
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/google"
        android:layout_marginTop="8dp"
        android:layout_marginRight="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:background="@color/facebookBlue"
        android:textColor="@color/textColorPrimary"
        android:text="@string/facebook_signup"/>


</RelativeLayout>